MInor changes from review request

--- a/DemoPrototype/Assets/About.html
+++ b/DemoPrototype/Assets/About.html
@@ -33,14 +33,14 @@
         <img id="imm-img" src="imm-img.png" /> 
         </div>
 
-        <p>AOU is a slave unit connected to an Injection Moulding Machine (IMM) 
+        <p>An AOU unit is a slave connected to an Injection Moulding Machine (IMM) 
         by means of a control cable,
         and the injection moulding tool of the IMM by means of tempering hoses. 
         The AOU is externally supplied with Circulating water (cooling), Pressurised air (valves), 
         and Electric power (heating and pumps).
         </p>
 
-        <p>Applying the AOU provides the ability to
+        <p>Using the AOU provides for the ability to
         concurrently injection mould multiple different 
         small to mid-sized plastic parts in one and the same tool.
         It also provides the ability to injection mould large plastic parts 
