Changes from test report 20161011

--- a/DemoPrototype/Assets/About.html
+++ b/DemoPrototype/Assets/About.html
@@ -24,10 +24,29 @@
   <body>
     <div id="content">
        
-        This is an App providing Supervision & Connectivity
-        for an AOU unit of
-        Plastics Unbound 
-        (<a href="www.plasticsunbound.com" target="_blank"> www.plasticsunbound.com</a>).
+        <p>This is the Supervision &amp; Connectivity App for the AOU unit 
+        of Plastics Unbound (<a href="www.plasticsunbound.com" target="_blank"> www.plasticsunbound.com</a>). 
+        It interacts with the User, the External world (networking), 
+        and the internal Control system of the AOU.
+        The App is mainly used to Configure &amp; calibrate the AOU, 
+        to set parameters for Injection moulding, 
+        and to Monitor the operation &amp; performance of the system.
+        Once the system is calibrated, and the moulding parameters for the Mould at hand have been chosen,
+        the AOU operates together with the IMM without needing or using the Supervision &amp; Connectivity App.
+        </p>
+
+        <p>This App has Software (SW) version <span id="appPacketVersion">1.0.37.0</span> 
+        and runs on a dedicated computer module sited inside the AOU.
+        It has no interfaces directly to the hardware of the AOU,
+        such as sensors and actuators.
+        </p>
+
+        <p>
+        The internal Control system of the AOU has Firmware (FW) version  <span id="aouFWVersion">1.6.9</span>,
+        and runs on a separate control unit sited inside the AOU.
+        It directly controls the AOU, 
+        and the hardware user interface dials and buttons etc on its electric cabinet front panel.
+        </p>
 
         <div class="img-wrapper">
         <img id="imm-img" src="imm-img.png" /> 
