--- a/DemoPrototype/Assets/Help.html
+++ b/DemoPrototype/Assets/Help.html
@@ -34,14 +34,18 @@
   <body>
     <div id="content">
 
-        <p>Running the AOU and interacting with the IMM connected
-        are made from the “<span class="red">Moulding</span>” menu of this App.
+        <p>Running the AOU and interacting with the IMM and Mould connected 
+        are made from the “<span class="red">Mould</span>” menu of this App. 
         </p>
 
-        <p>
-        For each tool rigged in the Injection Moulding Machine (IMM),
-        the AOU is setup in the “<span class="red">Calibrate</span>” menu of this App.
+        <p>For each Mould rigged in the Injection Moulding Machine (IMM), the AOU is setup 
+        using the “<span class="red">Calibrate</span>” menu of this App. 
         </p>
+
+        <p>While running the IMM with the AOU, 
+        their interaction is tuned in the “<span class="red">Tune</span>” menu of this App.
+        </p>
+
 
         <h2>Settings</h2>
 
