More layout changes to delay time matrix

--- a/DemoPrototype/Assets/Help.html
+++ b/DemoPrototype/Assets/Help.html
@@ -34,15 +34,16 @@
   <body>
     <div id="content">
 
-        <p>Running the AOU and interacting with the IMM and Mould connected 
+        <p>Running the Mould Tempering Unit (MTU) and interacting with the 
+        Injection Mouding Machine (IMM) and Mould connected 
         are made from the “<span class="red">Mould</span>” menu of this App. 
         </p>
 
-        <p>For each Mould rigged in the Injection Moulding Machine (IMM), the AOU is setup 
+        <p>For each Mould rigged in the IMM, the MTU is setup 
         using the “<span class="red">Calibrate</span>” menu of this App. 
         </p>
 
-        <p>While running the IMM with the AOU, 
+        <p>While running the IMM with the MTU, 
         their interaction is tuned in the “<span class="red">Tune</span>” menu of this App.
         </p>
 
@@ -61,8 +62,8 @@
            
         Short local help (this text), web links to the on-line manuals, and support contact information.
             <ul class="bullet1">
-                <li>AOU User’s manual</li>
-                <li>AOU Service manual</li>
+                <li>MTU User’s manual</li>
+                <li>MTU Service manual</li>
                 <li>Support & helpdesk</li>
             </ul>
             <ul class="bullet2">
@@ -73,7 +74,7 @@
 
          <h2>About</h2>
 
-         Brief description AOU and its abilities.<br/>
+         Brief description MTU and its abilities.<br/>
          Contact information for Plastics Unbound.
     </div>
 
