--- a/DemoPrototype/Assets/About.html
+++ b/DemoPrototype/Assets/About.html
@@ -24,27 +24,34 @@
   <body>
     <div id="content">
        
-        <p>This is the Supervision &amp; Connectivity App for the AOU unit 
-        of Plastics Unbound (<a href="www.plasticsunbound.com" target="_blank"> www.plasticsunbound.com</a>). 
-        It interacts with the User, the External world (networking), 
-        and the internal Control system of the AOU.
-        The App is mainly used to Configure &amp; calibrate the AOU, 
-        to set parameters for Injection moulding, 
-        and to Monitor the operation &amp; performance of the system.
-        Once the system is calibrated, and the moulding parameters for the Mould at hand have been chosen,
-        the AOU operates together with the IMM without needing or using the Supervision &amp; Connectivity App.
+
+        <p>This is the Mould Tempering unit Manager (MTM), 
+        a Supervision &amp; Connectivity App for the Mould Tempering Unit (MTU) 
+        of Plastics Unbound (<a href="www.plasticsunbound.com" target="_blank"> www.plasticsunbound.com</a> - PU). 
+        A MTU is a part of a system for using the Low Pressure Injection Moulding technology (LPIM) of PU.
+        Such a system consists of a MTU, a LPIM designed Mould, an Injection Moulding Machine (IMM), 
+        and a Tool Connect Kit (TCK).
         </p>
 
-        <p>This App has Software (SW) version <span id="appPacketVersion">1.0.43.0</span> 
-        and runs on a dedicated computer module sited inside the AOU.
-        It has no interfaces directly to the hardware of the AOU,
+        <p>The MTM App interacts with the User, the External world (networking), 
+        and the internal Control system of the MTU.
+        The App is mainly used to Configure &amp; calibrate the MTU, 
+        to set parameters for Injection moulding, 
+        and to Monitor the operation &amp; performance of the system.
+        Once the MTU is calibrated for the Mould, TCK, and IMM, and the moulding parameters for the Mould have been chosen,
+        the MTU operates slaved to the IMM without needing or using the App.
+        </p>
+
+        <p>This App has Software (SW) version <span id="appPacketVersion">1.0.40.0</span> 
+        and runs on a dedicated computer module sited inside the MTU.
+        It has no interfaces directly to the hardware of the MTU,
         such as sensors and actuators.
         </p>
 
         <p>
-        The internal Control system of the AOU has Firmware (FW) version  <span id="aouFWVersion">1.6.9</span>,
-        and runs on a separate control unit sited inside the AOU.
-        It directly controls the AOU, 
+        The internal Control system of the MTU has Firmware (FW) version  <span id="aouFWVersion">1.6.9</span>,
+        and runs on a separate control unit sited inside the MTU.
+        It directly controls the MTU, 
         and the hardware user interface dials and buttons etc on its electric cabinet front panel.
         </p>
 
@@ -52,20 +59,21 @@
         <img id="imm-img" src="imm-img.png" /> 
         </div>
 
-        <p>An AOU unit is a slave connected to an Injection Moulding Machine (IMM) 
+        <p>An MTU unit is connected to an IMM 
         by means of a control cable,
         and the injection moulding tool of the IMM by means of tempering hoses. 
-        The AOU is externally supplied with Circulating water (cooling), Pressurised air (valves), 
+        The MTU is externally supplied with Circulating water (cooling), Pressurised air (valves), 
         and Electric power (heating and pumps).
         </p>
 
-        <p>Using the AOU provides for the ability to
+        <p>Using the MTU provides for the ability to
         concurrently injection mould multiple different 
         small to mid-sized plastic parts in one and the same tool.
         It also provides the ability to injection mould large plastic parts 
         with thinner walls,
         thus significantly less plastic material, 
         than conventionally.
+        In addition the
         </p>
 
 
