Small changes i forgot to commit

--- a/DemoPrototype/Assets/About.html
+++ b/DemoPrototype/Assets/About.html
@@ -30,7 +30,26 @@
         of Plastics Unbound (<a href="www.plasticsunbound.com" target="_blank"> www.plasticsunbound.com</a> - PU). 
         A MTU is a part of a system for using the Low Pressure Injection Moulding technology (LPIM) of PU.
         Such a system consists of a MTU, a LPIM designed Mould, an Injection Moulding Machine (IMM), 
-        and a Tool Connect Kit (TCK).
+        and a Mould Connect Kit (MCK).
+        </p>
+
+        <p>Applying LPIM for injection moulding provides for possibilities like:
+        <ul>
+          <li>Using smaller IMM (lower clamping force)</li>
+          <li>Concurrently injection mould multiple different
+              small to mid-sized plastic parts in one and the same mould</li>
+          <li>Injection mould large plastic parts 
+              with thinner walls,
+              thus using significantly less plastic material 
+              than conventionally</li>
+          <li>Plastic parts with
+            <ul>
+              <li>Better filling of fine surface textures</li>
+              <li>Smaller structures in parts design</li>
+              <li>Less post-ejection warping (cooling and shrinkage)</li>
+            </ul>
+          </li>
+        </ul>
         </p>
 
         <p>The MTM App interacts with the User, the External world (networking), 
@@ -38,11 +57,15 @@
         The App is mainly used to Configure &amp; calibrate the MTU, 
         to set parameters for Injection moulding, 
         and to Monitor the operation &amp; performance of the system.
-        Once the MTU is calibrated for the Mould, TCK, and IMM, and the moulding parameters for the Mould have been chosen,
+        Once the MTU is calibrated for the Mould, MCK, and IMM, and the moulding parameters for the Mould have been chosen,
         the MTU operates slaved to the IMM without needing or using the App.
         </p>
 
-        <p>This App has Software (SW) version <span id="appPacketVersion">1.0.45.0</span> 
+        <div class="img-wrapper">
+        <img id="imm-img" src="imm-img.png" /> 
+        </div>
+
+        <p>This App has Software (SW) version <span id="appPacketVersion">1.0.46.0</span> 
         and runs on a dedicated computer module sited inside the MTU.
         It has no interfaces directly to the hardware of the MTU,
         such as sensors and actuators.
@@ -55,25 +78,11 @@
         and the hardware user interface dials and buttons etc on its electric cabinet front panel.
         </p>
 
-        <div class="img-wrapper">
-        <img id="imm-img" src="imm-img.png" /> 
-        </div>
-
-        <p>An MTU unit is connected to an IMM 
+        <p>A MTU is connected to an IMM 
         by means of a control cable,
         and the injection moulding tool of the IMM by means of tempering hoses. 
         The MTU is externally supplied with Circulating water (cooling), Pressurised air (valves), 
         and Electric power (heating and pumps).
-        </p>
-
-        <p>Using the MTU provides for the ability to
-        concurrently injection mould multiple different 
-        small to mid-sized plastic parts in one and the same tool.
-        It also provides the ability to injection mould large plastic parts 
-        with thinner walls,
-        thus significantly less plastic material, 
-        than conventionally.
-        In addition the
         </p>
 
 
